--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="already_have_an_account_login">Already have an account? Log in</string>
     <string name="back">Back</string>
 
+<!--    arrays for the dropdown menus -> language & themes -->
     <string-array name="language_selection_array">
         <item>English</item>
         <item>Afrikaans</item>
